--- a/package.json
+++ b/package.json
@@ -1,39 +1,54 @@
 {
-    "name": "coreplugins",
-    "version": "1.0.0",
-    "description": "Testing content plugins",
-    "dependencies": {},
-    "devDependencies": {
-        "angular": "^1.6.4",
-        "angular-mocks": "^1.6.4",
-        "jasmine": "2.5.2",
-        "jasmine-core": "2.5.2",
-        "jasmine-expect": "3.7.0",
-        "karma": "1.3.0",
-        "karma-coverage": "^1.1.1",
-        "karma-jasmine": "1.0.2",
-        "karma-jasmine-matchers": "3.7.0",
-        "karma-phantomjs-launcher": "1.0.2",
-        "phantomjs": "2.1.7",
-        "karma-mocha-reporter": "^2.2.3",
-        "karma-jasmine-jquery": "^0.1.1",
-        "karma-junit-reporter": "^1.2.0",
-        "karma-ng-html2js-preprocessor": "^1.0.0",
-        "karma-verbose-reporter": "0.0.6"
-    },
-    "scripts": {
-        "test": "karma start karma.pluginconf.js",
-        "testCollection": "karma start karma.collectionpluginconf.js",
-        "renderer": "karma start karma.renderer.pluginconf.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/ekstep/Content-Plugins.git"
-    },
-    "author": "",
-    "license": "CC",
-    "bugs": {
-        "url": "https://github.com/ekstep/Content-Plugins/issues"
-    },
-    "homepage": "https://github.com/ekstep/Content-Plugins#readme"
+  "name": "coreplugins",
+  "version": "1.0.0",
+  "description": "Testing content plugins",
+  "dependencies": {},
+  "devDependencies": {
+    "angular": "^1.7.2",
+    "angular-mocks": "^1.6.4",
+    "css-loader": "^1.0.0",
+    "expose-loader": "^0.7.5",
+    "fs": "0.0.1-security",
+    "html-loader": "^0.5.5",
+    "izitoast": "^1.3.0",
+    "jasmine": "2.5.2",
+    "jasmine-core": "2.5.2",
+    "jasmine-expect": "3.7.0",
+    "karma": "1.3.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "1.0.2",
+    "karma-jasmine-jquery": "^0.1.1",
+    "karma-jasmine-matchers": "3.7.0",
+    "karma-junit-reporter": "^1.2.0",
+    "karma-mocha-reporter": "^2.2.3",
+    "karma-ng-html2js-preprocessor": "^1.0.0",
+    "karma-phantomjs-launcher": "1.0.2",
+    "karma-verbose-reporter": "0.0.6",
+    "mini-css-extract-plugin": "^0.4.1",
+    "node-sass": "^4.9.2",
+    "phantomjs": "2.1.7",
+    "sass-loader": "^7.0.3",
+    "uglify-js": "^3.4.4",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.16.0",
+    "webpack-cli": "^3.0.8",
+    "webpack-entry-plus": "^1.0.12"
+  },
+  "scripts": {
+    "build": "webpack --config webpack.plugins.config.js --debug",
+    "test": "karma start karma.pluginconf.js",
+    "testCollection": "karma start karma.collectionpluginconf.js",
+    "renderer": "karma start karma.renderer.pluginconf.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ekstep/Content-Plugins.git"
+  },
+  "author": "",
+  "license": "CC",
+  "bugs": {
+    "url": "https://github.com/ekstep/Content-Plugins/issues"
+  },
+  "homepage": "https://github.com/ekstep/Content-Plugins#readme"
 }
