--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "angular": "^1.7.2",
     "angular-mocks": "^1.6.4",
+    "clipboard": "^2.0.1",
     "css-loader": "^1.0.0",
     "expose-loader": "^0.7.5",
     "fs": "0.0.1-security",
@@ -14,6 +15,7 @@
     "jasmine": "2.5.2",
     "jasmine-core": "2.5.2",
     "jasmine-expect": "3.7.0",
+    "jquery": "^3.3.1",
     "karma": "1.3.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "1.0.2",
@@ -33,7 +35,8 @@
     "url-loader": "^1.0.1",
     "webpack": "^4.16.0",
     "webpack-cli": "^3.0.8",
-    "webpack-entry-plus": "^1.0.12"
+    "webpack-entry-plus": "^1.0.12",
+    "xmlbuilder": "^10.0.0"
   },
   "scripts": {
     "build": "webpack --config webpack.plugins.config.js --debug",
