--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "xmlbuilder": "^10.0.0"
   },
   "scripts": {
-    "build": "webpack --config webpack.plugins.config.js --debug",
+    "plugin-build": "webpack --config webpack.plugins.config.js --debug",
     "test": "karma start karma.pluginconf.js",
     "testCollection": "karma start karma.collectionpluginconf.js",
     "renderer": "karma start karma.renderer.pluginconf.js"
