--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "clipboard": "^2.0.1",
     "css-loader": "^1.0.0",
     "expose-loader": "^0.7.5",
+    "file-loader": "^1.1.11",
     "fs": "0.0.1-security",
     "html-loader": "^0.5.5",
     "izitoast": "^1.3.0",
@@ -33,8 +34,8 @@
     "uglify-js": "^3.4.4",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.0.1",
-    "webpack": "^4.16.0",
-    "webpack-cli": "^3.0.8",
+    "webpack": "^4.16.2",
+    "webpack-cli": "^3.1.0",
     "webpack-entry-plus": "^1.0.12",
     "xmlbuilder": "^10.0.0"
   },
