--- a/org.ekstep.uploadcontent-1.1/manifest.json
+++ b/org.ekstep.uploadcontent-1.1/manifest.json
@@ -12,6 +12,10 @@
             { "type": "css", "src": "editor/styles/uploadcontent.css" },
             { "type": "js", "src": "editor/libs/jquery.fine-uploader.min.js" },
             { "type": "plugin", "plugin": "org.ekstep.toaster", "ver":"1.0"}
+        ],
+        "views":[
+            {"template":"./upload.html", "controller":"./uploadapp.js"}
         ]
+
     }
 }
